CIF-304 - CIF API Cleanup: API naming for coupons
 * renamed function postCoupons to postCoupon
 * renamed function deleteCoupons to deleteCoupon

--- a/customer-deployment/serverless.yml
+++ b/customer-deployment/serverless.yml
@@ -168,16 +168,16 @@ functions:
     annotations:
       web-export: true
 
-  postCoupons:
-    name: ${self:custom.customer-package}/postCoupons
+  postCoupon:
+    name: ${self:custom.customer-package}/postCoupon
     sequence:
       - ${self:custom.carts-actions}/postCouponService
       - ${self:custom.common-actions}/webActionTransformer
     annotations:
       web-export: true
 
-  deleteCoupons:
-    name: ${self:custom.customer-package}/deleteCoupons
+  deleteCoupon:
+    name: ${self:custom.customer-package}/deleteCoupon
     sequence:
       - ${self:custom.carts-actions}/deleteCouponService
       - ${self:custom.common-actions}/webActionTransformer
