--- a/customer-deployment/package.json
+++ b/customer-deployment/package.json
@@ -14,7 +14,7 @@
   "customer-package": "magento",
   "bindings-namespace": "cif-core",
   "scripts": {
-    "postinstall": "node ./postinstall.js",
+    "postinstall": "node ./postinstall.js && chmod +x $(npm bin)/serverless",
     "deploy": "$(npm bin)/serverless deploy",
     "clean": "$(npm bin)/serverless remove"
   }
