CIF-334 - Setup continuous delivery

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,14 @@ jobs:
       - run:
           name: Release
           command: node ci/release.js
+  deploy:
+    docker:
+      - image: adobe/commerce-cif-ci-env:v0.0.1
+    steps:
+      - checkout
+      - run:
+          name: Deploy
+          command: node ci/deploy.js
 
 workflows:
   version: 2
@@ -36,4 +44,10 @@ workflows:
             branches:
               ignore: /.*/
             tags:
-              only: /^@(.+)@release-(major|minor|patch)$/ 
+              only: /^@(.+)@release-(major|minor|patch)$/
+      - deploy:
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^@adobe\/(.*)-[\d]+.[\d]+.[\d]+$/
