--- a/customer-deployment/package.json
+++ b/customer-deployment/package.json
@@ -10,9 +10,9 @@
     "serverless": "1.29.0",
     "serverless-openwhisk": "0.13.0"
   },
-  "customer-namespace": "cif-customer",
+  "customer-namespace": "smaftei",
   "customer-package": "magento",
-  "bindings-namespace": "cif-core",
+  "bindings-namespace": "smaftei-core",
   "scripts": {
     "postinstall": "node ./postinstall.js && chmod +x $(npm bin)/serverless",
     "deploy": "$(npm bin)/serverless deploy",
