--- a/src/categories/package.json
+++ b/src/categories/package.json
@@ -27,9 +27,9 @@
   },
   "scripts": {
     "fix-serverless-permission": "chmod +x $(npm bin)/serverless",
-    "lint": "$(npm bin)/eslint -f table --ignore-path ../../.eslintignore .",
-    "deploy": "$(npm bin)/serverless deploy",
-    "remove": "$(npm bin)/serverless remove",
+    "lint": "eslint -f table --ignore-path ../../.eslintignore .",
+    "deploy": "serverless deploy",
+    "remove": "serverless remove",
     "deploy-current": "npm run deploy -- --ow-package commerce-cif-magento-category@$npm_package_version --shared",
     "deploy-latest": "npm run deploy -- --ow-package commerce-cif-magento-category@latest --shared",
     "deploy-suffix": "npm run deploy -- --ow-package commerce-cif-magento-category@${OW_PACKAGE_SUFFIX} --shared",
