--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "node": ">= 0.8.0"
   },
   "devDependencies": {
-    "lerna": "2.9.0",
     "chai": "4.0.2",
     "chai-http": "4.0.0",
     "chai-sorted": "0.1.2",
     "http-status-codes": "^1.2.0",
+    "lerna": "2.9.0",
     "mocha": "5.2.0",
-    "mocha-jenkins-reporter": "0.3.7",
+    "mocha-junit-reporter": "1.18.0",
+    "mocha-multi-reporters": "1.1.7",
     "mock-require": "2.0.2",
-    "sinon": "5.1.0",
     "nyc": "11.1.0",
-    "xunit-file": "1.0.0"
+    "sinon": "5.1.0"
   },
   "nyc": {
     "include": [
@@ -47,9 +47,9 @@
     "remove": "lerna run remove-package --concurrency 1",
     "generate-cov-html": "nyc report --reporter=html",
     "test": "lerna run lint && npm run test-cov && npm run generate-cov-html",
-    "test-cov": "XUNIT_FILE=test/results/unit/results.xml nyc mocha test/**/*Test.js -R xunit-file && npm run lcov-report",
+    "test-cov": "nyc npm run unit && npm run lcov-report",
     "lcov-report": "nyc report --reporter=lcov",
-    "unit": "mocha test/**/*Test.js",
-    "test-it": "XUNIT_FILE=test/results/integration/results.xml mocha test/**/*IT.js -R xunit-file"
+    "unit": "mocha test/**/*Test.js --reporter mocha-multi-reporters --reporter-options configFile=mocha-unit.json",
+    "test-it": "mocha test/**/*IT.js --reporter mocha-multi-reporters --reporter-options configFile=mocha-unit.json"
   }
 }
