CIF-404 - Integrate Magento graphQL implementation in cif-magento repository

--- a/customer-deployment/serverless.yml
+++ b/customer-deployment/serverless.yml
@@ -20,6 +20,7 @@ custom:
   categories-actions: /${self:custom.customer-namespace}/commerce-cif-magento-category@latest
   customers-actions: /${self:custom.customer-namespace}/commerce-cif-magento-customer@latest
   products-actions: /${self:custom.customer-namespace}/commerce-cif-magento-product@latest
+  graphql-actions: /${self:custom.customer-namespace}/commerce-cif-magento-graphql@latest
 
 plugins:
   - '@cruglobal/serverless-merge-config'
@@ -53,7 +54,10 @@ resources:
         $<<: ${file(credentials.json)}
     commerce-cif-magento-common@latest:
       binding: /${self:custom.bindings-namespace}/commerce-cif-magento-common@latest
-
+    commerce-cif-magento-graphql@latest:
+      binding: /${self:custom.bindings-namespace}/commerce-cif-magento-graphql@latest
+      parameters: ${file(credentials.json)}
+      
 functions:
 
   getCart:
@@ -252,6 +256,14 @@ functions:
     name: ${self:custom.customer-package}/searchProducts
     sequence:
       - ${self:custom.products-actions}/searchProductsService
+      - ${self:custom.common-actions}/webActionTransformer
+    annotations:
+      web-export: true
+
+  graphql:
+    name: ${self:custom.customer-package}/graphql
+    sequence:
+      - ${self:custom.graphql-actions}/graphqlService
       - ${self:custom.common-actions}/webActionTransformer
     annotations:
       web-export: true
