Cross Platform Support (#40)
* trivial - Execute serverless permission fix only on CI
* trivial - Make deployment-install.js compatible with Windows
* trivial - Remove npm bin
* trivial - Fix serverless permission
* trivial - Configure Mocha without environment variable
* trivial - Use forked eslint-plugin-header version with Windows fix
* trivial - Fix path in tests

--- a/customer-deployment/package.json
+++ b/customer-deployment/package.json
@@ -14,8 +14,9 @@
   "customer-package": "magento",
   "bindings-namespace": "cif-core",
   "scripts": {
-    "postinstall": "node ./postinstall.js && chmod +x $(npm bin)/serverless",
-    "deploy": "$(npm bin)/serverless deploy",
-    "clean": "$(npm bin)/serverless remove"
+    "postinstall": "node ./postinstall.js",
+    "fix-serverless-permission": "chmod +x $(npm bin)/serverless",
+    "deploy": "serverless deploy",
+    "clean": "serverless remove"
   }
 }
