--- a/src/carts/package.json
+++ b/src/carts/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "eslint": "3.19.0",
-    "eslint-plugin-header": "1.2.0",
+    "eslint-plugin-header": "git+https://github.com/herzog31/eslint-plugin-header.git",
     "serverless": "1.29.0",
     "serverless-openwhisk": "0.13.0",
     "serverless-webpack": "4.3.0",
@@ -25,10 +25,10 @@
     "extends": "../../.eslintrc.js"
   },
   "scripts": {
-    "postinstall": "chmod +x $(npm bin)/serverless",
-    "lint": "$(npm bin)/eslint -f table --ignore-path ../../.eslintignore .",
-    "deploy": "$(npm bin)/serverless deploy",
-    "remove": "$(npm bin)/serverless remove",
+    "fix-serverless-permission": "chmod +x $(npm bin)/serverless",
+    "lint": "eslint -f table --ignore-path ../../.eslintignore .",
+    "deploy": "serverless deploy",
+    "remove": "serverless remove",
     "deploy-current": "npm run deploy -- --ow-package commerce-cif-magento-cart@$npm_package_version --shared",
     "deploy-latest": "npm run deploy -- --ow-package commerce-cif-magento-cart@latest --shared",
     "deploy-suffix": "npm run deploy -- --ow-package commerce-cif-magento-cart@${OW_PACKAGE_SUFFIX} --shared",
