--- a/src/categories/package.json
+++ b/src/categories/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "eslint": "3.19.0",
-    "eslint-plugin-header": "git+https://github.com/herzog31/eslint-plugin-header.git",
+    "eslint-plugin-header": "2.0",
     "js-yaml": "3.9.0",
     "serverless": "1.29.0",
     "serverless-openwhisk": "0.13.0",
