--- a/src/common/package.json
+++ b/src/common/package.json
@@ -14,15 +14,16 @@
     "request": "2.87.0",
     "request-promise-native": "1.0.5",
     "tar": "4.4.6",
-    "webpack": "4.0.1"
+    "mkdirp": "0.5.1",
+    "js-yaml": "3.5.1"
   },
   "devDependencies": {
     "eslint": "3.19.0",
     "eslint-plugin-header": "2.0",
-    "mkdirp": "0.5.1",
     "serverless": "1.29.0",
     "serverless-openwhisk": "0.13.0",
-    "serverless-webpack": "4.3.0"
+    "serverless-webpack": "4.3.0",
+    "webpack": "4.0.1"
   },
   "eslintConfig": {
     "extends": "../../.eslintrc.js"
