CIF-430 - Get product by id service for Magento     * Get product by id service implementation     * Unit tests     * Integration tests     * Deployemnt scripts updated     * Some small fixes

--- a/customer-deployment/serverless.yml
+++ b/customer-deployment/serverless.yml
@@ -248,6 +248,14 @@ functions:
     annotations:
       web-export: true
 
+  getProductById:
+    name: ${self:custom.customer-package}/getProductById
+    sequence:
+      - ${self:custom.products-actions}/getProductByIdService
+      - ${self:custom.common-actions}/webActionTransformer
+    annotations:
+      web-export: true
+
   searchProducts:
     name: ${self:custom.customer-package}/searchProducts
     sequence:
