--- a/src/graphql/package.json
+++ b/src/graphql/package.json
@@ -10,17 +10,15 @@
   },
   "dependencies": {
     "@adobe/commerce-cif-common": "1.0.0",
-    "@adobe/commerce-cif-magento-common": "0.0.1",
-    "@adobe/commerce-cif-model": "1.1.2",
-    "@adobe/commerce-cif-magento-product": "0.0.1",
+    "@adobe/commerce-cif-magento-common": "1.1.0",
+    "@adobe/commerce-cif-model": "1.1.0",
+    "graphql": "14.0.0",
     "graphql-tools": "3.1.1",
-    "handlebars": "4.0.11",
+    "json-to-graphql-query": "1.8.0",
     "request": "2.87.0",
-    "request-promise-native": "1.0.5",
-    "graphql": "0.13.2"
-  },
+    "request-promise-native": "1.0.5"
+  }, 
   "devDependencies": {
-    "copy-webpack-plugin": "4.5.1",
     "eslint": "3.19.0",
     "eslint-plugin-header": "1.2.0",
     "serverless": "1.29.0",
