--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "chai": "4.0.2",
     "chai-http": "4.0.0",
     "chai-sorted": "0.1.2",
-    "http-status-codes": "^1.2.0",
+    "http-status-codes": "1.2.0",
     "lerna": "2.9.0",
     "mocha": "5.2.0",
     "mocha-junit-reporter": "1.18.0",
