--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: adobe/commerce-cif-ci-env:v0.0.1
+      - image: adobe/commerce-cif-ci-env:ci-v0.0.2
     steps:
       - checkout
       - run:
@@ -16,7 +16,7 @@ jobs:
           path: audit.json
   release:
     docker:
-      - image: adobe/commerce-cif-ci-env:v0.0.1
+      - image: adobe/commerce-cif-ci-env:ci-v0.0.2
     steps:
       - checkout
       - run:
@@ -24,7 +24,7 @@ jobs:
           command: node ci/release.js
   deploy:
     docker:
-      - image: adobe/commerce-cif-ci-env:v0.0.1
+      - image: adobe/commerce-cif-ci-env:ci-v0.0.2
     steps:
       - checkout
       - run:
