--- a/src/products/serverless.yml
+++ b/src/products/serverless.yml
@@ -7,7 +7,7 @@ package:
 
 provider:
   name: openwhisk
-  runtime: nodejs:default
+  runtime: nodejs:10
   ignore_certs: true
   defaultService: magento
   service: ${opt:service, self:provider.defaultService}
