CIF-473 - [Auth] Implement authorization endpoints for guest/anonymous login
- Magento does not support guest tokens, so the implementation basically returns HTTP 501

--- a/customer-deployment/serverless.yml
+++ b/customer-deployment/serverless.yml
@@ -260,6 +260,14 @@ functions:
     annotations:
       web-export: true
 
+  postCustomerAuth:
+    name: ${self:custom.customer-package}/postCustomerAuth
+    sequence:
+      - ${self:custom.customers-actions}/postCustomerAuthService
+      - ${self:custom.common-actions}/webActionTransformer
+    annotations:
+      web-export: true
+
   getProductById:
     name: ${self:custom.customer-package}/getProductById
     sequence:
