--- a/src/customer/serverless.yml
+++ b/src/customer/serverless.yml
@@ -31,3 +31,7 @@ functions:
   postCustomerLoginService:
     name: ${self:custom.ow-package}/postCustomerLoginService
     handler: postCustomerLogin.main
+
+  postCustomerAuthService:
+    name: ${self:custom.ow-package}/postCustomerAuthService
+    handler: postCustomerAuth.main
