CIF-691 - /customers/{id} should be deprecated and replaced by /customers/me
- implemented the "get customer by token" method

--- a/src/customer/serverless.yml
+++ b/src/customer/serverless.yml
@@ -35,3 +35,7 @@ functions:
   postCustomerAuthService:
     name: ${self:custom.ow-package}/postCustomerAuthService
     handler: postCustomerAuth.main
+
+  getCustomerService:
+    name: ${self:custom.ow-package}/getCustomerService
+    handler: getCustomer.main
