--- a/customer-deployment/serverless.yml
+++ b/customer-deployment/serverless.yml
@@ -268,6 +268,14 @@ functions:
     annotations:
       web-export: true
 
+  getCustomer:
+    name: ${self:custom.customer-package}/getCustomer
+    sequence:
+      - ${self:custom.customers-actions}/getCustomerService
+      - ${self:custom.common-actions}/webActionTransformer
+    annotations:
+      web-export: true
+
   getProductById:
     name: ${self:custom.customer-package}/getProductById
     sequence:
