CIF-690 - Refactor Magento's customer-deployment configuration files
- splitted config uration parameters in 2 files
- moved all configuration parameters to serverless.yml file

--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,8 @@ dev-development/service.yml
 # Development files
 credentials.json
 *-credentials.json
+environment.json
+*-environment.json
 dev-test
 
 # Test results
