--- a/customer-deployment/package.json
+++ b/customer-deployment/package.json
@@ -10,7 +10,8 @@
     "serverless": "1.36.0",
     "serverless-openwhisk": "0.16.2",
     "@adobe/commerce-cif-model": "1.4.0",
-    "minimist": "1.2.0"
+    "minimist": "1.2.0",
+    "traverse": "0.6.6"
   },
   "scripts": {
     "postinstall": "node ./postinstall.js",
