--- a/src/carts/package.json
+++ b/src/carts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@adobe/commerce-cif-magento-cart",
   "version": "1.0.1",
-  "description": "Adobe Commerce Integration Framework (CIF) Magento Integration Cart Project",
+  "description": "Adobe Commerce Integration Framework (CIF REST) Magento Integration Cart Project",
   "author": "Adobe Systems Inc.",
   "license": "Apache-2.0",
   "repository": {
