--- a/src/common/package.json
+++ b/src/common/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@adobe/commerce-cif-magento-common",
   "version": "1.1.0",
-  "description": "Adobe Commerce Integration Framework (CIF) Magento Integration Common Project",
+  "description": "Adobe Commerce Integration Framework (CIF REST) Magento Integration Common Project",
   "author": "Adobe Systems Inc.",
   "license": "Apache-2.0",
   "repository": {
