--- a/src/products/package.json
+++ b/src/products/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@adobe/commerce-cif-magento-product",
   "version": "1.1.1",
-  "description": "Adobe Commerce Integration Framework (CIF) Magento Integration Product Project",
+  "description": "Adobe Commerce Integration Framework (CIF REST) Magento Integration Product Project",
   "author": "Adobe Systems Inc.",
   "license": "Apache-2.0",
   "repository": {
