--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "chai-http": "4.0.0",
     "chai-sorted": "0.1.2",
     "http-status-codes": "1.2.0",
-    "lerna": "^3.4.2",
+    "lerna": "3.13.1",
     "mocha": "5.2.0",
     "mocha-junit-reporter": "1.18.0",
     "mocha-multi-reporters": "1.1.7",
     "mock-require": "2.0.2",
-    "nyc": "11.1.0",
+    "nyc": "13.3.0",
     "sinon": "5.1.0"
   },
   "nyc": {
